palylang/parse/PalyLangParser.py
# Generated from PalyLangParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PalyLangParser ( Parser ):

    grammarFileName = "PalyLangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'struct'", "'union'", "'break'", "'char'", 
                     "'continue'", "'do'", "'else'", "'for'", "'if'", "'import'", 
                     "'int'", "'long'", "'return'", "'short'", "'void'", 
                     "'volatile'", "'while'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'null'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'", 
                     "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", 
                     "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", 
                     "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", "'-='", 
                     "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", 
                     "'>>='", "'>>>='", "'->'", "'@'", "'$'" ]

    symbolicNames = [ "<INVALID>", "STRUCT", "UNION", "BREAK", "CHAR", "CONTINUE", 
                      "DO", "ELSE", "FOR", "IF", "IMPORT", "INT", "LONG", 
                      "RETURN", "SHORT", "VOID", "VOLATILE", "WHILE", "DECIMAL_LITERAL", 
                      "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "CHAR_LITERAL", 
                      "STRING_LITERAL", "TEXT_BLOCK", "NULL_LITERAL", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMI", "COMMA", "DOT", "ASSIGN", "GT", "LT", "BANG", 
                      "TILDE", "QUESTION", "COLON", "EQUAL", "LE", "GE", 
                      "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", 
                      "MUL", "DIV", "BITAND", "BITOR", "CARET", "MOD", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", 
                      "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", 
                      "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "ARROW", "AT", 
                      "DOLLAR", "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER" ]

    RULE_compilationUnit = 0
    RULE_importDeclaration = 1
    RULE_typeDeclaration = 2
    RULE_structDeclartion = 3
    RULE_unionDeclaration = 4
    RULE_structBody = 5
    RULE_unionBody = 6
    RULE_fieldDeclaration = 7
    RULE_functionDeclaration = 8
    RULE_functionBody = 9
    RULE_formalParameterList = 10
    RULE_formalParameter = 11
    RULE_literal = 12
    RULE_textLiteral = 13
    RULE_integerLiteral = 14
    RULE_variableDeclarator = 15
    RULE_initializer = 16
    RULE_blockInitializer = 17
    RULE_initializerList = 18
    RULE_designation = 19
    RULE_designator = 20
    RULE_variableDeclaratorId = 21
    RULE_block = 22
    RULE_blockContent = 23
    RULE_variableDeclaration = 24
    RULE_statement = 25
    RULE_forControl = 26
    RULE_forCondition = 27
    RULE_forUpdate = 28
    RULE_forInit = 29
    RULE_expressionList = 30
    RULE_functionCall = 31
    RULE_expression = 32
    RULE_primary = 33
    RULE_typeType = 34
    RULE_declarableTypeType = 35
    RULE_primitiveType = 36
    RULE_identifier = 37
    RULE_arguments = 38

    ruleNames =  [ "compilationUnit", "importDeclaration", "typeDeclaration", 
                   "structDeclartion", "unionDeclaration", "structBody", 
                   "unionBody", "fieldDeclaration", "functionDeclaration", 
                   "functionBody", "formalParameterList", "formalParameter", 
                   "literal", "textLiteral", "integerLiteral", "variableDeclarator", 
                   "initializer", "blockInitializer", "initializerList", 
                   "designation", "designator", "variableDeclaratorId", 
                   "block", "blockContent", "variableDeclaration", "statement", 
                   "forControl", "forCondition", "forUpdate", "forInit", 
                   "expressionList", "functionCall", "expression", "primary", 
                   "typeType", "declarableTypeType", "primitiveType", "identifier", 
                   "arguments" ]

    EOF = Token.EOF
    STRUCT=1
    UNION=2
    BREAK=3
    CHAR=4
    CONTINUE=5
    DO=6
    ELSE=7
    FOR=8
    IF=9
    IMPORT=10
    INT=11
    LONG=12
    RETURN=13
    SHORT=14
    VOID=15
    VOLATILE=16
    WHILE=17
    DECIMAL_LITERAL=18
    HEX_LITERAL=19
    OCT_LITERAL=20
    BINARY_LITERAL=21
    CHAR_LITERAL=22
    STRING_LITERAL=23
    TEXT_BLOCK=24
    NULL_LITERAL=25
    LPAREN=26
    RPAREN=27
    LBRACE=28
    RBRACE=29
    LBRACK=30
    RBRACK=31
    SEMI=32
    COMMA=33
    DOT=34
    ASSIGN=35
    GT=36
    LT=37
    BANG=38
    TILDE=39
    QUESTION=40
    COLON=41
    EQUAL=42
    LE=43
    GE=44
    NOTEQUAL=45
    AND=46
    OR=47
    INC=48
    DEC=49
    ADD=50
    SUB=51
    MUL=52
    DIV=53
    BITAND=54
    BITOR=55
    CARET=56
    MOD=57
    ADD_ASSIGN=58
    SUB_ASSIGN=59
    MUL_ASSIGN=60
    DIV_ASSIGN=61
    AND_ASSIGN=62
    OR_ASSIGN=63
    XOR_ASSIGN=64
    MOD_ASSIGN=65
    LSHIFT_ASSIGN=66
    RSHIFT_ASSIGN=67
    URSHIFT_ASSIGN=68
    ARROW=69
    AT=70
    DOLLAR=71
    WS=72
    COMMENT=73
    LINE_COMMENT=74
    IDENTIFIER=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PalyLangParser.EOF, 0)

        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PalyLangParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(PalyLangParser.ImportDeclarationContext,i)


        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PalyLangParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(PalyLangParser.TypeDeclarationContext,i)


        def structDeclartion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PalyLangParser.StructDeclartionContext)
            else:
                return self.getTypedRuleContext(PalyLangParser.StructDeclartionContext,i)


        def functionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PalyLangParser.FunctionDeclarationContext)
            else:
                return self.getTypedRuleContext(PalyLangParser.FunctionDeclarationContext,i)


        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PalyLangParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(PalyLangParser.VariableDeclarationContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PalyLangParser.SEMI)
            else:
                return self.getToken(PalyLangParser.SEMI, i)

        def getRuleIndex(self):
            return PalyLangParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = PalyLangParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295023638) != 0) or _la==70 or _la==75:
                self.state = 86
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 78
                    self.importDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 79
                    self.typeDeclaration()
                    pass

                elif la_ == 3:
                    self.state = 80
                    self.structDeclartion()
                    pass

                elif la_ == 4:
                    self.state = 81
                    self.functionDeclaration()
                    pass

                elif la_ == 5:
                    self.state = 82
                    self.variableDeclaration()
                    self.state = 83
                    self.match(PalyLangParser.SEMI)
                    pass

                elif la_ == 6:
                    self.state = 85
                    self.match(PalyLangParser.SEMI)
                    pass


                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(PalyLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(PalyLangParser.IMPORT, 0)

        def STRING_LITERAL(self):
            return self.getToken(PalyLangParser.STRING_LITERAL, 0)

        def SEMI(self):
            return self.getToken(PalyLangParser.SEMI, 0)

        def getRuleIndex(self):
            return PalyLangParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)




    def importDeclaration(self):

        localctx = PalyLangParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(PalyLangParser.IMPORT)
            self.state = 94
            self.match(PalyLangParser.STRING_LITERAL)
            self.state = 95
            self.match(PalyLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDeclartion(self):
            return self.getTypedRuleContext(PalyLangParser.StructDeclartionContext,0)


        def unionDeclaration(self):
            return self.getTypedRuleContext(PalyLangParser.UnionDeclarationContext,0)


        def getRuleIndex(self):
            return PalyLangParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)




    def typeDeclaration(self):

        localctx = PalyLangParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeDeclaration)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.structDeclartion()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.unionDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclartionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(PalyLangParser.STRUCT, 0)

        def identifier(self):
            return self.getTypedRuleContext(PalyLangParser.IdentifierContext,0)


        def structBody(self):
            return self.getTypedRuleContext(PalyLangParser.StructBodyContext,0)


        def getRuleIndex(self):
            return PalyLangParser.RULE_structDeclartion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclartion" ):
                listener.enterStructDeclartion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclartion" ):
                listener.exitStructDeclartion(self)




    def structDeclartion(self):

        localctx = PalyLangParser.StructDeclartionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDeclartion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(PalyLangParser.STRUCT)
            self.state = 102
            self.identifier()
            self.state = 103
            self.structBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNION(self):
            return self.getToken(PalyLangParser.UNION, 0)

        def identifier(self):
            return self.getTypedRuleContext(PalyLangParser.IdentifierContext,0)


        def unionBody(self):
            return self.getTypedRuleContext(PalyLangParser.UnionBodyContext,0)


        def getRuleIndex(self):
            return PalyLangParser.RULE_unionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionDeclaration" ):
                listener.enterUnionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionDeclaration" ):
                listener.exitUnionDeclaration(self)




    def unionDeclaration(self):

        localctx = PalyLangParser.UnionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(PalyLangParser.UNION)
            self.state = 106
            self.identifier()
            self.state = 107
            self.unionBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PalyLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PalyLangParser.RBRACE, 0)

        def fieldDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PalyLangParser.FieldDeclarationContext)
            else:
                return self.getTypedRuleContext(PalyLangParser.FieldDeclarationContext,i)


        def getRuleIndex(self):
            return PalyLangParser.RULE_structBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructBody" ):
                listener.enterStructBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructBody" ):
                listener.exitStructBody(self)




    def structBody(self):

        localctx = PalyLangParser.StructBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(PalyLangParser.LBRACE)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 55312) != 0) or _la==70 or _la==75:
                self.state = 110
                self.fieldDeclaration()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(PalyLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PalyLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PalyLangParser.RBRACE, 0)

        def fieldDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PalyLangParser.FieldDeclarationContext)
            else:
                return self.getTypedRuleContext(PalyLangParser.FieldDeclarationContext,i)


        def getRuleIndex(self):
            return PalyLangParser.RULE_unionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionBody" ):
                listener.enterUnionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionBody" ):
                listener.exitUnionBody(self)




    def unionBody(self):

        localctx = PalyLangParser.UnionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_unionBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(PalyLangParser.LBRACE)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 55312) != 0) or _la==70 or _la==75:
                self.state = 119
                self.fieldDeclaration()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(PalyLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(PalyLangParser.VariableDeclarationContext,0)


        def SEMI(self):
            return self.getToken(PalyLangParser.SEMI, 0)

        def getRuleIndex(self):
            return PalyLangParser.RULE_fieldDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDeclaration" ):
                listener.enterFieldDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDeclaration" ):
                listener.exitFieldDeclaration(self)




    def fieldDeclaration(self):

        localctx = PalyLangParser.FieldDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fieldDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.variableDeclaration()
            self.state = 128
            self.match(PalyLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeType(self):
            return self.getTypedRuleContext(PalyLangParser.TypeTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(PalyLangParser.IdentifierContext,0)


        def formalParameterList(self):
            return self.getTypedRuleContext(PalyLangParser.FormalParameterListContext,0)


        def functionBody(self):
            return self.getTypedRuleContext(PalyLangParser.FunctionBodyContext,0)


        def getRuleIndex(self):
            return PalyLangParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = PalyLangParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.typeType()
            self.state = 131
            self.identifier()
            self.state = 132
            self.formalParameterList()
            self.state = 133
            self.functionBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(PalyLangParser.BlockContext,0)


        def SEMI(self):
            return self.getToken(PalyLangParser.SEMI, 0)

        def getRuleIndex(self):
            return PalyLangParser.RULE_functionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionBody" ):
                listener.enterFunctionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionBody" ):
                listener.exitFunctionBody(self)




    def functionBody(self):

        localctx = PalyLangParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionBody)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.block()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(PalyLangParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PalyLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PalyLangParser.RPAREN, 0)

        def formalParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PalyLangParser.FormalParameterContext)
            else:
                return self.getTypedRuleContext(PalyLangParser.FormalParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PalyLangParser.COMMA)
            else:
                return self.getToken(PalyLangParser.COMMA, i)

        def getRuleIndex(self):
            return PalyLangParser.RULE_formalParameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameterList" ):
                listener.enterFormalParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameterList" ):
                listener.exitFormalParameterList(self)




    def formalParameterList(self):

        localctx = PalyLangParser.FormalParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_formalParameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(PalyLangParser.LPAREN)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 55312) != 0) or _la==70 or _la==75:
                self.state = 140
                self.formalParameter()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==33:
                    self.state = 141
                    self.match(PalyLangParser.COMMA)
                    self.state = 142
                    self.formalParameter()
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 150
            self.match(PalyLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeType(self):
            return self.getTypedRuleContext(PalyLangParser.TypeTypeContext,0)


        def variableDeclaratorId(self):
            return self.getTypedRuleContext(PalyLangParser.VariableDeclaratorIdContext,0)


        def getRuleIndex(self):
            return PalyLangParser.RULE_formalParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameter" ):
                listener.enterFormalParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameter" ):
                listener.exitFormalParameter(self)




    def formalParameter(self):

        localctx = PalyLangParser.FormalParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_formalParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.typeType()
            self.state = 153
            self.variableDeclaratorId()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integerLiteral(self):
            return self.getTypedRuleContext(PalyLangParser.IntegerLiteralContext,0)


        def textLiteral(self):
            return self.getTypedRuleContext(PalyLangParser.TextLiteralContext,0)


        def CHAR_LITERAL(self):
            return self.getToken(PalyLangParser.CHAR_LITERAL, 0)

        def NULL_LITERAL(self):
            return self.getToken(PalyLangParser.NULL_LITERAL, 0)

        def getRuleIndex(self):
            return PalyLangParser.RULE_literal
